--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,7 @@
 
     "settings": {
         "python.pythonPath": "/usr/local/bin/python",
+        "python.formatting.provider": "black"
     },
 
     "extensions": [
