Add settings vscode tasks

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,6 +15,7 @@
         "ms-python.python",
         "njpwerner.autodocstring",
         "donjayamanne.githistory",
+        "forbeslindesay.forbeslindesay-taskrunner",
     ],
 
     "forwardPorts": [8000]
