Add migrate task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,15 @@
                 "${workspaceFolder}/manage.py",
                 "runserver"
             ]
-        }
+        },
+        {
+            "label": "migrate",
+            "type": "shell",
+            "command": "python",
+            "args": [
+                "${workspaceFolder}/manage.py",
+                "migrate"
+            ]
+        },
     ]
 }
